Fix overflowing the header for longpages

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
     border-bottom: 0.2em solid #669;
     background-color: #99c;
     box-shadow: -2px 2px 6px #bbb;
+	z-index: 1;
 }
 body {
     padding: 20px;
